Payments fields: - Fixing bugs on firefox - Preparing for handling i18n

--- a/src/main/webapp/app/connected/accountsdb-add/payment-custom-block/edit-inline-tile/edit.inline.tile.component.scss
+++ b/src/main/webapp/app/connected/accountsdb-add/payment-custom-block/edit-inline-tile/edit.inline.tile.component.scss
@@ -58,3 +58,10 @@
     z-index: 2;
     overflow: unset;
 }
+
+//Fixing firefox
+@-moz-document url-prefix() {
+    .payment-value {
+        margin-bottom: 7px!important;
+    }
+}
