--- a/src/main/webapp/app/connected/accountsdb-add/payment-custom-block/payment-custom-block.component.scss
+++ b/src/main/webapp/app/connected/accountsdb-add/payment-custom-block/payment-custom-block.component.scss
@@ -34,6 +34,10 @@ $border-radius-payment: 10px !important;
     color: white;
 }
 
+.fixFF{
+    width: calc(26% + 0rem) !important;
+}
+
 .top-left {
     border-top-left-radius: $border-radius-payment;
 }
